--- a/main.html
+++ b/main.html
@@ -10,16 +10,16 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<h2 align="center">My Playlist</h2>
+	<h1 align="center">My Playlist</h1>
 	<div class="player_one">
-		<a href="https://www.youtube.com/watch?v=kd-6aw99DpA " target="_blank">Song 1</a><br>
-		<a href="https://www.youtube.com/watch?v=9iIX4PBplAY " target="_blank">Song 2</a><br>
-		<a href="https://www.youtube.com/watch?v=IjBAgWKW12Y " target="_blank">Song 3</a><br>
-		<a href="https://www.youtube.com/watch?v=puKD3nkB1h4 " target="_blank">Song 4</a><br>
-		<a href="https://www.youtube.com/watch?v=6MgsHSAcI9k" target="_blank">Song 5</a>
+		<ul>
+		<li><a href="https://www.youtube.com/watch?v=kd-6aw99DpA " target="_blank">Song 1</a></li>
+		<li><a href="https://www.youtube.com/watch?v=9iIX4PBplAY " target="_blank">Song 2</a></li>
+		<li><a href="https://www.youtube.com/watch?v=IjBAgWKW12Y " target="_blank">Song 3</a></li>
+		<li><a href="https://www.youtube.com/watch?v=puKD3nkB1h4 " target="_blank">Song 4</a></li>
+		<li><a href="https://www.youtube.com/watch?v=6MgsHSAcI9k" target="_blank">Song 5</a></li>
 	</div>
-	<h3 align="center">Now Playing</h3>
-	<br>
+	<h1 align="center">Now Playing...</h1>
 	<div class="player_two" align="center">
 	<video controls>
 		<source src=" https://www.w3schools.com/tags/movie.mp4">
