--- a/main.html
+++ b/main.html
@@ -19,16 +19,16 @@
 		<li><a href="https://www.youtube.com/watch?v=puKD3nkB1h4 " target="_blank">Song 4</a></li>
 		<li><a href="https://www.youtube.com/watch?v=6MgsHSAcI9k" target="_blank">Song 5</a></li>
 	</div>
-	<h1 align="center">Now Playing...</h1>
+	<h2 align="center">Now Playing...</h2>
 	<div class="player_two" align="center">
 	<video controls>
 		<source src=" https://www.w3schools.com/tags/movie.mp4">
 	</video>
 		<br>
-		<b>MP3 songs</b>
+		<h2>MP3 songs</h2>
 		<br>
 		<audio controls>
-			<source src="https://www.pagalworld.com.se/files/download/id/64630">
+			<source src="https://www.pagalworld.com.se/files/download/id/64630" type="audio/mp3">
 		</audio>
 	</div>
 </body>
