--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
 	<h2 align="center">Now Playing...</h2>
 	<div class="player_two" align="center">
 	<video controls>
-		<source src=" https://www.w3schools.com/tags/movie.mp4">
+		<source src=" https://www.w3schools.com/tags/movie.mp4" type="video/mp4">
 	</video>
 		<br>
 		<h2>MP3 songs</h2>
